# bloom-filter

./: .travis.yml  Cargo.toml  README.md
src/: bloom.rs  lib.rs
