[package]
name = "bloom-filter"
version = "0.1.0"
authors = ["sagalasan <sagalasan@users.noreply.github.com>"]
description = "A Bloom Filter implementation in Rust"
repository = "https://github.com/sagalasan/bloom-filter"
license = "MIT"
readme = "README.md"
keywords = ["bloomfilter", "bloom", "filter", "bloom-filter"]
categories = ["Algorithms"]
exclude = ["resources/*"]

[dependencies]
bit-vec = "0.5.0"
murmur3 = "0.4.1"